
public class PizzeriaStrasbourg extends Pizzeria {
	
	public PizzeriaStrasbourg() {
		this.PizzaFactory = PizzaFactoryStrasbourg.getInstance();
	}
	

}

